# Project_pep_block

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
pep_block/: __init__.py  create_aas_metadata.py  dataset.py  features.py  output_log.txt  pdbqt_generation.py  pep_generation.py  peptide_filtering.py  plot_test_results.py  plots.py  test_pep.py
pep_block/modeling/: predict.py  train.py
results/: filtered_peptides.parquet
results/pdbqt_files/: peptide_AFALRN.pdbqt  peptide_AFGLRN.pdbqt  peptide_AFHLRN.pdbqt  peptide_AFKLRN.pdbqt  peptide_AFLARN.pdbqt  peptide_AFLGRN.pdbqt  peptide_AFLHRN.pdbqt  peptide_AFLKRN.pdbqt  peptide_AFLNRN.pdbqt  peptide_AFLQRN.pdbqt  peptide_AFLRRN.pdbqt  peptide_AFLSRN.pdbqt  peptide_AFNLRN.pdbqt  peptide_AFQLRN.pdbqt  peptide_AFRLRN.pdbqt  peptide_AFSLRN.pdbqt  peptide_GFALRN.pdbqt  peptide_GFGLRN.pdbqt  peptide_GFHLRN.pdbqt  peptide_GFKLRN.pdbqt  peptide_GFLARN.pdbqt  peptide_GFLGRN.pdbqt  peptide_GFLHRN.pdbqt  peptide_GFLKRN.pdbqt  peptide_GFLNRN.pdbqt  peptide_GFLQRN.pdbqt  peptide_GFLRRN.pdbqt  peptide_GFLSRN.pdbqt  peptide_GFNLRN.pdbqt  peptide_GFQLRN.pdbqt  peptide_GFRLRN.pdbqt  peptide_GFSLRN.pdbqt  peptide_HFALRN.pdbqt  peptide_HFGLRN.pdbqt  peptide_HFHLRN.pdbqt  peptide_HFKLRN.pdbqt  peptide_HFLARN.pdbqt  peptide_HFLGRN.pdbqt  peptide_HFLHRN.pdbqt  peptide_HFLKRN.pdbqt  (+494 more)
results/peptide_structure/: peptide_0.pdbqt  peptide_1.pdbqt  peptide_10.pdbqt  peptide_100.pdbqt  peptide_101.pdbqt  peptide_102.pdbqt  peptide_103.pdbqt  peptide_104.pdbqt  peptide_105.pdbqt  peptide_106.pdbqt  peptide_107.pdbqt  (+521 more)
