[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pep_block"
version = "0.0.1"
description = "This project generates peptide sequences using itertools, performs biological tests on these sequences (such as hydrophobicity, charge, and polarity), and outputs the results along with metadata in a new Parquet file."
authors = [
  { name = "Takwa BEN RADHIA" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["pep_block"]
force_sort_within_sections = true
